# Borealis

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  registry.py
backend/api/: __init__.py  alerts.py  analysis.py  assess.py  best_site.py  config.py  current_wind.py  main.py  place.py  schemas.py  seasonal.py  storms.py  suitability.py  tornado.py
backend/briefing/: __init__.py
backend/constraints/: __init__.py
backend/field/: __init__.py  colormaps.py  render.py
backend/forecast/: __init__.py  base.py  constants.py  earth2.py  openmeteo.py  types.py
backend/operational/: __init__.py  assess.py  energy.py  schemas.py
backend/operational/briefing/: __init__.py
backend/operational/forecast/: openmeteo.py  (+1 more)
backend/resources/: __init__.py  base.py  constants.py  elevation.py  nasapower.py  openmeteo.py  types.py
backend/risk/: __init__.py
backend/scoring/: __init__.py
backend/scripts/: bake_field_textures.py  build_tornado_climatology.py  smoke_assess.py  smoke_openmeteo.py  smoke_resource.py  smoke_storms.py  smoke_suitability.py
backend/storms/: __init__.py  cache.py  nhc.py  nws.py  types.py
backend/tests/: test_agri_suitability.py  test_analysis.py  test_assess.py  test_best_site.py  test_briefing.py  test_constraints.py  test_energy_model.py  test_energy_suitability.py  test_field_render.py  test_health.py  test_nasapower.py  test_openmeteo.py  test_risk.py  test_scoring.py  test_seasonal.py  test_solar_power.py  test_storms.py  test_suitability_route.py  test_wind_power.py
backend/verticals/: __init__.py  base.py
(+60 files in other folders)
