[project]
name = "borealis-backend"
version = "0.1.0"
description = "Borealis — weather-risk decision platform (generic forecast → impact → risk → briefing spine)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pvlib>=0.11,<0.14",
    "scipy>=1.17.1",
    "anthropic>=0.105.2",
    "global-land-mask>=1.0.0",
    "pillow>=10",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

# This is an application run from source (uv manages the env only); it is not a
# distributable package, so there is no build backend.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
